maybe cbor tagging

--- a/data/wrangling.ipynb
+++ b/data/wrangling.ipynb
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -308,8 +308,7 @@
      "output_type": "stream",
      "text": [
       "┌ Info: Precompiling PyCall [438e738f-606a-5dbb-bf0a-cddfbfd45ab0]\n",
-      "└ @ Base loading.jl:1273\n",
-      "ERROR: LoadError: LoadError: "
+      "└ @ Base loading.jl:1273\n"
      ]
     }
    ],
@@ -319,43 +318,214 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: pyimport not defined",
-     "output_type": "error",
-     "traceback": [
-      "UndefVarError: pyimport not defined",
-      "",
-      "Stacktrace:",
-      " [1] top-level scope at In[2]:1"
-     ]
-    }
-   ],
-   "source": [
-    "signing = pyimport(\"ecdsa.SigningKey\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7071067811865475"
+       "PyObject <class 'ecdsa.keys.SigningKey'>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "math.sin(math.pi / 4)"
+    "ecdsa = pyimport(\"ecdsa\")\n",
+    "SigningKey = ecdsa.SigningKey"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PyObject <ecdsa.keys.SigningKey object at 0x7fdaf40562e8>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sk = SigningKey.generate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "PyObject <ecdsa.keys.VerifyingKey object at 0x7fdaec15f550>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vk = sk.verifying_key"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"T\\xcb\\xd5\\x01\\xe2̛r\\v\\xe1Mz\\xa5l\\xa2)o\\xf1(\\xd4n\\u378\\x81\\e`[\\x85[:]\\xe3\\xbdy\\x80ar\\xd2\\xe2Xi/O\\u5f5=\\xf7x\""
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "signature = sk.sign(pybytes(\"message\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "true"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vk.verify(pybytes(signature), pybytes(\"message\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import CBOR"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#56 (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import Base64.base64encode\n",
+    "import HTTP.URIs: escapeuri\n",
+    "base64url = escapeuri ∘ base64encode"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"gjv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2Fjv%2F%2F%2F%2F%2F%2F%2F%2F%2F%2FQ%3D%3D\""
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[1, 2] |> CBOR.encode |> base64url"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"AQAAAAAAAAA%3D\""
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base64url(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"gjv//////////jv//////////Q==\""
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base64encode(encode([1, 2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"DmQDAAAAAAA=\""
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "base64encode(222222)"
    ]
   },
   {
