--- a/ccbor/check_canonicality.ipynb
+++ b/ccbor/check_canonicality.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 216,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,150 +24,187 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 217,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"{\\\"b\\\":2,\\\"a\\\":1}\""
+       "\"{\\\"c\\\":{\\\"b\\\":1,\\\"a\\\":2},\\\"b\\\":2,\\\"a\\\":1}\""
       ]
      },
-     "execution_count": 34,
+     "execution_count": 217,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "data_dict = Dict{String, UInt8}(\"a\" => 1, \"b\" => 2)\n",
+    "data_dict = Dict(\"a\" => 1, \"b\" => 2, \"c\" => Dict(\"b\" => 1, \"a\" => 2))\n",
     "data_json = json(data_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String,Any} with 5 entries:\n",
+       "  \"sub\"      => \"geo:?q=47.1691576,8.514572(Juanitos)&u=30\"\n",
+       "  \"iat\"      => 1578835560\n",
+       "  \"iss\"      => \"BBmEKZciGMonT_G0CmiM4HdfM6o0ktuh3xIFadvc1TVgA0ZJUNIS6go0pX8jwS…\n",
+       "  \"rating\"   => 75\n",
+       "  \"metadata\" => Dict{String,Any}(\"client_uri\"=>\"https://mangrove.reviews\",\"gend…"
+      ]
+     },
+     "execution_count": 218,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_json = \"\"\"{\"iss\":\"BBmEKZciGMonT_G0CmiM4HdfM6o0ktuh3xIFadvc1TVgA0ZJUNIS6go0pX8jwSUorbDfv27T_M9M9wldMFk6t00\",\"iat\":1578835560,\"sub\":\"geo:?q=47.1691576,8.514572(Juanitos)&u=30\",\"rating\":75,\"metadata\":{\"display_name\":\"dsafsa\",\"given_name\":\"sadf\",\"age\":23,\"gender\":\"Female\",\"client_uri\":\"https://mangrove.reviews\"}}\"\"\"\n",
+    "data_dict = JSON.parse(data_json)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
    "metadata": {
     "scrolled": false
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "280"
+      ]
+     },
+     "execution_count": 219,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_jl = encode(data_dict)\n",
+    "length(encoded_jl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 220,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "261"
+      ]
+     },
+     "execution_count": 220,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_js_borc = `node js/cbor.js borc encode $data_json` |> open |> JSON.parse |> Vector{UInt8}\n",
+    "length(encoded_js_borc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 221,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "261"
+      ]
+     },
+     "execution_count": 221,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_js_cbor = `node js/cbor.js cbor encode $data_json` |> open |> JSON.parse |> Vector{UInt8}\n",
+    "length(encoded_js_cbor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 222,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "261"
+      ]
+     },
+     "execution_count": 222,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "encoded_rs = `./rust/target/debug/rust encode $data_json` |> open |> JSON.parse |> Vector{UInt8}\n",
+    "length(encoded_rs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AssertionError",
+     "evalue": "AssertionError: encoded_js_borc == encoded_js_cbor",
+     "output_type": "error",
+     "traceback": [
+      "AssertionError: encoded_js_borc == encoded_js_cbor",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[223]:1"
+     ]
+    }
+   ],
+   "source": [
+    "@assert(encoded_js_borc == encoded_js_cbor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 224,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "encoded_jl = encode(data_dict);"
+    "@assert(encoded_js_borc == encoded_rs)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "7-element Array{Any,1}:\n",
-       " 0xa2\n",
-       " 0x61\n",
-       " 0x61\n",
-       " 0x01\n",
-       " 0x61\n",
-       " 0x62\n",
-       " 0x02"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "encoded_js = JSON.parse(open(`node js/cbor.js borc encode $data_json`), inttype=UInt8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{ b: 2, a: 1 }\n"
+     "ename": "AssertionError",
+     "evalue": "AssertionError: encoded_rs == encoded_jl",
+     "output_type": "error",
+     "traceback": [
+      "AssertionError: encoded_rs == encoded_jl",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope at In[225]:1"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Process(`\u001b[4mnode\u001b[24m \u001b[4mjs/cbor.js\u001b[24m \u001b[4mborc\u001b[24m \u001b[4mdecode\u001b[24m \u001b[4m'[162,97,98,24,2,97,97,24,1]'\u001b[24m`, ProcessExited(0))"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "run(`node js/cbor.js borc decode $(json(encoded_jl))`)"
+    "@assert(encoded_rs == encoded_jl)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{ a: 1, b: 2 }\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "Process(`\u001b[4mnode\u001b[24m \u001b[4mjs/cbor.js\u001b[24m \u001b[4mborc\u001b[24m \u001b[4mdecode\u001b[24m \u001b[4m'[162,97,97,1,97,98,2]'\u001b[24m`, ProcessExited(0))"
-      ]
-     },
-     "execution_count": 50,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "run(`node js/cbor.js borc decode $(json(encoded_js))`)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "7-element Array{Any,1}:\n",
-       " 0xa2\n",
-       " 0x61\n",
-       " 0x61\n",
-       " 0x01\n",
-       " 0x61\n",
-       " 0x62\n",
-       " 0x02"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "encoded_rs = JSON.parse(open(`./rust/target/debug/rust encode $data_json`), inttype=UInt8)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
