clean up notebook

--- a/ccbor/check_canonicality.ipynb
+++ b/ccbor/check_canonicality.ipynb
@@ -15,11 +15,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [],
    "source": [
-    "using CBOR, JSON"
+    "using CBOR, JSON, Test"
    ]
   },
   {
@@ -157,53 +157,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "AssertionError: encoded_js_borc == encoded_js_cbor",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37mJS CBOR libs: \u001b[39m\u001b[91m\u001b[1mTest Failed\u001b[22m\u001b[39m at \u001b[39m\u001b[1mIn[230]:2\u001b[22m\n",
+      "  Expression: encoded_js_borc == encoded_js_cbor\n",
+      "   Evaluated: UInt8[0xa5, 0x63, 0x69, 0x61, 0x74, 0x1a, 0x5e, 0x1b, 0x1e, 0x68  …  0x61, 0x6d, 0x65, 0x66, 0x64, 0x73, 0x61, 0x66, 0x73, 0x61] == UInt8[0xa5, 0x63, 0x69, 0x73, 0x73, 0x78, 0x57, 0x42, 0x42, 0x6d  …  0x76, 0x65, 0x2e, 0x72, 0x65, 0x76, 0x69, 0x65, 0x77, 0x73]\n",
+      "Stacktrace:\n",
+      " [1] top-level scope at \u001b[1mIn[230]:2\u001b[22m\n",
+      " [2] top-level scope at \u001b[1m/buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.3/Test/src/Test.jl:1107\u001b[22m\n",
+      " [3] top-level scope at \u001b[1mIn[230]:2\u001b[22m\n",
+      "\u001b[37m\u001b[1mTest Summary: | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[91m\u001b[1mFail  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\n",
+      "JS CBOR libs  | \u001b[32m   1  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[36m    2\u001b[39m\n"
+     ]
+    },
+    {
+     "ename": "TestSetException",
+     "evalue": "Some tests did not pass: 1 passed, 1 failed, 0 errored, 0 broken.",
      "output_type": "error",
      "traceback": [
-      "AssertionError: encoded_js_borc == encoded_js_cbor",
+      "Some tests did not pass: 1 passed, 1 failed, 0 errored, 0 broken.",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[223]:1"
+      " [1] finish(::Test.DefaultTestSet) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.3/Test/src/Test.jl:870",
+      " [2] top-level scope at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.3/Test/src/Test.jl:1117",
+      " [3] top-level scope at In[230]:2"
      ]
     }
    ],
    "source": [
-    "@assert(encoded_js_borc == encoded_js_cbor)"
+    "@testset \"JS CBOR libs\" begin\n",
+    "  @test encoded_js_borc == encoded_js_cbor\n",
+    "  @test decode(encoded_js_borc) == decode(encoded_js_cbor)\n",
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "@assert(encoded_js_borc == encoded_rs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AssertionError",
-     "evalue": "AssertionError: encoded_rs == encoded_jl",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37m\u001b[1mTest Summary:        | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\n",
+      "JS vs Rust CBOR libs | \u001b[32m   2  \u001b[39m\u001b[36m    2\u001b[39m\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Test.DefaultTestSet(\"JS vs Rust CBOR libs\", Any[], 2, false)"
+      ]
+     },
+     "execution_count": 231,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@testset \"JS vs Rust CBOR libs\" begin\n",
+    "  @test encoded_js_borc == encoded_rs\n",
+    "  @test decode(encoded_js_borc) == decode(encoded_rs)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 232,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[37mJulia vs Rust CBOR libs: \u001b[39m\u001b[91m\u001b[1mTest Failed\u001b[22m\u001b[39m at \u001b[39m\u001b[1mIn[232]:2\u001b[22m\n",
+      "  Expression: encoded_rs == encoded_jl\n",
+      "   Evaluated: UInt8[0xa5, 0x63, 0x69, 0x61, 0x74, 0x1a, 0x5e, 0x1b, 0x1e, 0x68  …  0x61, 0x6d, 0x65, 0x66, 0x64, 0x73, 0x61, 0x66, 0x73, 0x61] == UInt8[0xa5, 0x63, 0x73, 0x75, 0x62, 0x78, 0x29, 0x67, 0x65, 0x6f  …  0x65, 0x3b, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xff, 0xe8]\n",
+      "Stacktrace:\n",
+      " [1] top-level scope at \u001b[1mIn[232]:2\u001b[22m\n",
+      " [2] top-level scope at \u001b[1m/buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.3/Test/src/Test.jl:1107\u001b[22m\n",
+      " [3] top-level scope at \u001b[1mIn[232]:2\u001b[22m\n",
+      "\u001b[37m\u001b[1mTest Summary:           | \u001b[22m\u001b[39m\u001b[32m\u001b[1mPass  \u001b[22m\u001b[39m\u001b[91m\u001b[1mFail  \u001b[22m\u001b[39m\u001b[36m\u001b[1mTotal\u001b[22m\u001b[39m\n",
+      "Julia vs Rust CBOR libs | \u001b[32m   1  \u001b[39m\u001b[91m   1  \u001b[39m\u001b[36m    2\u001b[39m\n"
+     ]
+    },
+    {
+     "ename": "TestSetException",
+     "evalue": "Some tests did not pass: 1 passed, 1 failed, 0 errored, 0 broken.",
      "output_type": "error",
      "traceback": [
-      "AssertionError: encoded_rs == encoded_jl",
+      "Some tests did not pass: 1 passed, 1 failed, 0 errored, 0 broken.",
       "",
       "Stacktrace:",
-      " [1] top-level scope at In[225]:1"
+      " [1] finish(::Test.DefaultTestSet) at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.3/Test/src/Test.jl:870",
+      " [2] top-level scope at /buildworker/worker/package_linux64/build/usr/share/julia/stdlib/v1.3/Test/src/Test.jl:1117",
+      " [3] top-level scope at In[232]:2"
      ]
     }
    ],
    "source": [
-    "@assert(encoded_rs == encoded_jl)"
+    "@testset \"Julia vs Rust CBOR libs\" begin\n",
+    "  @test encoded_rs == encoded_jl\n",
+    "  @test decode(encoded_rs) == decode(encoded_jl)\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results\n",
+    "\n",
+    "All libraries manage to preserve semantics of encoded message.\n",
+    "\n",
+    "- Julia uses some tags during encoding resulting in a different length message.\n",
+    "- JS `cbor` library does not seem to encode canonical CBOR.\n",
+    "- Rust encodes canonical CBOR as long as it does not do it from a `Serialize`able struct, but from `serde_cbor::Value` "
    ]
   }
  ],
