remove footer from search and make scroll nicer

--- a/ccbor/check_canonicality.ipynb
+++ b/ccbor/check_canonicality.ipynb
@@ -10,7 +10,9 @@
     "- [Julia](https://github.com/JuliaIO/CBOR.jl)\n",
     "- [Rust](https://docs.rs/serde_cbor/0.11.0/serde_cbor/)\n",
     "- [JS cbor](https://www.npmjs.com/package/cbor)\n",
-    "- [JS borc](https://www.npmjs.com/package/borc)"
+    "- [JS borc](https://www.npmjs.com/package/borc)\n",
+    "\n",
+    "Standard: https://tools.ietf.org/html/rfc7049#section-3.8"
    ]
   },
   {
@@ -277,8 +279,8 @@
     "All libraries manage to preserve semantics of encoded message.\n",
     "\n",
     "- Julia uses some tags during encoding resulting in a different length message.\n",
-    "- JS `cbor` library does not seem to encode canonical CBOR.\n",
-    "- Rust encodes canonical CBOR as long as it does not do it from a `Serialize`able struct, but from `serde_cbor::Value` "
+    "- JS `cbor` library does not seem to encode Canonical CBOR.\n",
+    "- Rust encodes canonical CBOR as long as it does not do it from a `Serialize`able struct, but from `serde_cbor::Value` (this tests only the second variant)."
    ]
   }
  ],
