more samples in inference

--- a/aggregator/jupyter/turing_model.ipynb
+++ b/aggregator/jupyter/turing_model.ipynb
@@ -337,65 +337,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Mean\n",
-       "                                                                                                    parameters    mean\n",
-       "  ────────────────────────────────────────────────────────────────────────────────────────────────────────────  ──────\n",
-       "                                         qualities[geo:46.414202849999995,6.9275531?q=Château de Chillon&u=30]  0.7171\n",
-       "                                                        qualities[geo:47.0002812,8.3983246?q=Bürgenstock&u=30]  0.7425\n",
-       "                                                            qualities[geo:47.0505452,8.3054682?q=Lucerne&u=30]  0.8551\n",
-       "                                                               qualities[geo:47.0511141,8.29512?q=Gütsch&u=30]  0.7461\n",
-       "                                                          qualities[geo:47.1437602,8.5337843?q=Zugerberg&u=30]  0.6012\n",
-       "                                                          qualities[geo:47.1671127,8.5157744?q=Juan Long&u=30]  0.7107\n",
-       "                                                         qualities[geo:47.1674468,8.5149937?q=Gotthärdli&u=30]  0.8291\n",
-       "                                                            qualities[geo:47.1691576,8.514572?q=Juanitos&u=30]  0.6993\n",
-       "                                                 qualities[geo:47.1718112,8.5137931?q=Reformierte Kirche&u=30]  0.9256\n",
-       "                                                 qualities[geo:47.2273245,8.8156345?q=Schloss Rapperswil&u=30]  0.8496\n",
-       "                                                         qualities[geo:47.2533249,8.7800877?q=Baumgarten&u=30]  0.8510\n",
-       "                                                   qualities[geo:47.3807554,8.5040594?q=Brasserie Nestor&u=30]  0.9050\n",
-       "                                                     qualities[geo:47.3869001,8.5170453?q=Maag MusicHall&u=30]  0.8106\n",
-       "                                            qualities[geo:47.4133289,8.5522166?q=Hong-Kong Food Paradise&u=30]  0.8513\n",
-       "                                                              qualities[geo:47.4133982,9.348073?q=TSO AG&u=30]  0.6440\n",
-       "                                                         qualities[geo:47.6038321,-122.3300624?q=Seattle&u=30]  0.7990\n",
-       "                                     qualities[geo:48.753018749999995,9.631041102509345?q=Gasthaus Löwen&u=30]  0.7527\n",
-       "                                                  qualities[geo:49.4288031,11.0919334?q=Landbierparadies&u=30]  0.9444\n",
-       "                                                         qualities[geo:51.1081974,17.0247706?q=Peruwiana&u=30]  0.7760\n",
-       "                                                           qualities[geo:51.1089776,17.0326689?q=Wroclaw&u=30]  0.9182\n",
-       "                                                 qualities[geo:51.9262145,4.4788948?q=Restaurant De Jong&u=30]  0.8239\n",
-       "                                             qualities[geo:52.29096405,14.060294292125526?q=SaarowTherme&u=30]  0.6132\n",
-       "                                                            qualities[geo:57.0766696,24.3231405?q=Klaips&u=30]  0.6923\n",
-       "                                          qualities[geo:-34.4698592,-57.8433679?q=Colonia del Sacramento&u=30]  0.6663\n",
-       "                                                        qualities[geo:-34.5940268,-58.4469043?q=Bohemios&u=30]  0.9075\n",
-       "                                                qualities[geo:-41.0757505,-71.4764209?q=Cerro Campanario&u=30]  0.8939\n",
-       "                                                qualities[geo:-41.1350512,-71.2935964?q=La Fonda del Tío&u=30]  0.5690\n",
-       "                                             qualities[geo:-41.1982502,-71.4862753?q=Refugio Emilio Frey&u=30]  0.9276\n",
-       "                                                                        qualities[https://coronavirus.jhu.edu]  0.8794\n",
-       "                                                                                qualities[https://f-droid.org]  0.6596\n",
-       "                                                                                    qualities[https://hexo.io]  0.9495\n",
-       "                                                                              qualities[https://julialang.org]  0.7886\n",
-       "                                                                                qualities[https://nytimes.com]  0.9182\n",
-       "                                                                         qualities[https://opencollective.com]  0.9208\n",
-       "                                                                                qualities[https://postgis.net]  0.7663\n",
-       "                                                                                  qualities[https://rocket.rs]  0.9191\n",
-       "                                                                              qualities[https://vuetifyjs.com]  0.8761\n",
-       "  qualities[urn:maresi:OMDdikKH6Ke4u_j6GC_e5qPyE_XU1D5fKbIOQ3DakAdtYR7iciwtP3uTfMbLJhLqMJhmvrrUcXj9jP6rvRgvwQ]  0.8786\n",
-       "  qualities[urn:maresi:bod8gNkD1DVoMzDC7c6-BSEs9sqy9VmvzxU6vbi1gtj0WKK8wNXF4rEmvb1x-ivRbCqyvwEuCnkZ6t2-Bj5yYw]  0.7497\n",
-       "  qualities[urn:maresi:isTSWSRYeSTNQhlSxHiLA0q9JyPysw0PSXCim-FZrEv55DwaJACoC4FfmsZnJJLYkhv07A5-jm0ITRnnBeYbjg]  0.8438\n",
-       "  qualities[urn:maresi:x60afu-1J70vqlWS0eh1lh9wX0caBx88vkMKYcqDgKhsFWwF2hAgfUoQu5_jdm3Kdy3TC9-Tteec_vOppNR_kQ]  0.8526\n"
+       "  parameters    mean\n",
+       "  ──────────  ──────\n",
+       "   biases[0]  0.0200\n",
+       "   biases[1]  0.0200\n",
+       "   biases[2]  0.0300\n",
+       "   biases[3]  0.2900\n",
+       "   biases[4]  0.0000\n",
+       "   biases[5]  0.0000\n",
+       "   biases[6]  0.0500\n",
+       "   biases[7]  0.0100\n",
+       "   biases[8]  0.0000\n",
+       "   biases[9]  0.0200\n",
+       "  biases[10]  0.0200\n",
+       "  biases[11]  0.6800\n",
+       "  biases[12]  0.0100\n",
+       "  biases[13]  0.0000\n",
+       "  biases[14]  0.0100\n",
+       "  biases[15]  0.0200\n",
+       "  biases[16]  0.0000\n",
+       "  biases[17]  0.0000\n",
+       "  biases[18]  0.6200\n",
+       "  biases[19]  0.0000\n",
+       "  biases[20]  0.0100\n",
+       "  biases[21]  0.0600\n"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mean(chn[:qualities])"
+    "mean(chn[:biases])"
    ]
   },
   {
