add geolocation on places filter

--- a/aggregator/jupyter/turing_model.ipynb
+++ b/aggregator/jupyter/turing_model.ipynb
@@ -11,9 +11,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 60,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: Due to a previously reported error, the running code does not match saved version for the following files:\n",
+      "│ \n",
+      "│   /home/keorn/Documents/mangrove/aggregator/src/Model.jl\n",
+      "│ \n",
+      "│ Use Revise.errors() to report errors again.\n",
+      "└ @ Revise /home/keorn/.julia/packages/Revise/SZ4ae/src/Revise.jl:648\n",
+      "┌ Warning: /home/keorn/.julia/packages/Plots/rNwM4/src/Plots.jl/ is not an existing directory, Revise is not watching\n",
+      "└ @ Revise /home/keorn/.julia/packages/Revise/SZ4ae/src/Revise.jl:489\n"
+     ]
+    }
+   ],
    "source": [
     "using StatsPlots"
    ]
