--- a/widget/src/utils/locales/en.json
+++ b/widget/src/utils/locales/en.json
@@ -7,11 +7,12 @@
   "returningReviewer": "Returning reviewer? Update JWK here:",
   "currentJwk": "Current JWK:",
   "currentPem": "Current PEM:",
-  "updateJwk": "✓ Update JWK",
-  "close": "✗ Close",
+  "logIn": "Log In",
+  "close": "✗",
   "errorInfo": "Error occured:",
   "commentOn": "Comment on",
   "sbReview": "`s review",
+  "reviewFlagged": "Flagged as inappropriate",
   "addOptionalInfo": "Add optional useful information to publish",
   "frmRating": "Rating",
   "frmOpinion": "Describe your experience",
@@ -42,11 +43,11 @@
   "metaIsPersonal": "Personal experience",
   "metaGenerated": "Generated",
   "metaContext": {
-    "business": "Business visit",
-    "family": "with Family",
-    "couple": "Romantic couple",
-    "friends": "with Friends",
-    "solo": "Alone"
+    "business": "Business trip",
+    "family": "Family trip",
+    "couple": "Couple",
+    "friends": "Friends trip",
+    "solo": "Solo trip"
   },
   "review_one": "review",
   "review_other": "reviews",
@@ -56,9 +57,10 @@
   "facetRating": "Number of stars",
   "showFilters": "Show filters",
   "hideFilters": "Hide filters",
-  "signInNew": "New here? Post your first review to create an account with the posted information",
-  "signInReturning": "Returning reviewer?",
-  "signInLogIn": "Returning reviewer? Log in",
+  "signInNew": "New here? Post your first review to create an account with the posted information.",
+  "signInReturning": "If you already have an Open Reviews account, or if you would like to switch to another Open Reviews account, you can",
+  "signInLogIn": " log in here.",
+  "signInPlaceholder": "Paste Your key here",
   "reviewOpts": {
     "useful": "This is useful",
     "confirm": "Confirm this experience",
@@ -78,5 +80,9 @@
     "reason04": "The review is marketing or spam",
     "reason05": "The review is on the wrong subject profile",
     "reason06": "The content doesn't mention a buying or service experience and is solely ethical, political or value-laden opinion"
-  }
+  },
+  "popupHeader":"Thank you for leaving an Open Review and helping others have better experiences!",
+  "popupContent":" You can save your password (secret key) to use the same account on different platforms that work with <a href=\"https://open-reviews.net\" rel=\"open reviews\" target=\"_blank\"> Open Reviews </a> . Just paste this password when you leave your next review in log in section.",
+  "popupButton":"Copy password to clipboard"
+
 }
