--- a/widget/src/utils/locales/pl.json
+++ b/widget/src/utils/locales/pl.json
@@ -7,11 +7,12 @@
   "returningReviewer": "Jeżeli chesz, możesz podać swoje hasło tutaj:",
   "currentJwk": "Aktualnie używany JWK:",
   "currentPem": "Aktualnie używany PEM:",
-  "updateJwk": "✓ Zaktualizuj JWK",
-  "close": "✗ Zamknij",
+  "logIn": "Log In",
+  "close": "✗",
   "errorInfo": "Wystąpił błąd:",
   "commentOn": "Komentujesz",
   "sbReview": "",
+  "reviewFlagged": "Oznaczone jako nieodpowiednie",
   "addOptionalInfo": "Dodaj opcjonalne informacje, które zostaną opublikowane",
   "frmRating": "Ocena",
   "frmOpinion": "Napisz swoją opinię",
@@ -57,9 +58,10 @@
   "facetRating": "Ilość gwiazdek",
   "showFilters": "Pokaż filtry",
   "hideFilters": "Ukryj filtry",
-  "signInNew": "New here? Post your first review to create an account with the posted information",
-  "signInReturning": "Returning reviewer?",
-  "signInLogIn": "Zaloguj się",
+  "signInNew": "New here? Post your first review to create an account with the posted information. ",
+  "signInReturning": "If you already have an Open Reviews account, or if you would like to switch to another Open Reviews account, you can",
+  "signInLogIn": " log in here.",
+  "signInPlaceholder": "Paste Your key here",
   "reviewOpts": {
     "useful": "To było pomocne",
     "confirm": "Potwierdź tę opinię",
@@ -79,5 +81,8 @@
     "reason04": "The review is marketing or spam",
     "reason05": "The review is on the wrong subject profile",
     "reason06": "The content doesn't mention a buying or service experience and is solely ethical, political or value-laden opinion"
-  }
+  },
+  "popupHeader":"Thank you for leaving an Open Review and helping others have better experiences!",
+  "popupContent":" You can save your password (secret key) to use the same account on different platforms that work with <a href=\"https://open-reviews.net\" rel=\"open reviews\" target=\"_blank\"> Open Reviews </a> . Just paste this password when you leave your next review in log in section.",
+  "popupButton":"Copy password to clipboard"
 }
