Added German translation

--- a/widget/src/utils/locales/de.json
+++ b/widget/src/utils/locales/de.json
@@ -1,87 +1,88 @@
 {
-  "rateAndReview": "+ Rate and Review",
+  "rateAndReview": "+ Bewerten",
   "signIn": "✓ Sign In",
-  "post": "Post publicly",
-  "cancel": "Cancel",
-  "reviewOf": "Review of",
+  "post": "Rezension veröffentlichen",
+  "cancel": "Abbrechen",
+  "reviewOf": "Rezension von",
   "returningReviewer": "Returning reviewer? Update JWK here:",
   "currentJwk": "Current JWK:",
   "currentPem": "Current PEM:",
-  "logIn": "Log in",
+  "logIn": "Login",
   "close": "✗",
-  "errorInfo": "Error occured:",
-  "commentOn": "Comment on",
-  "sbReview": "`s review",
-  "addOptionalInfo": "Add optional useful information to publish",
+  "errorInfo": "Ein Fehler ist aufgetreten",
+  "commentOn": "Kommentar zu",
+  "sbReview": "`s Rezension",
+  "reviewFlagged": "Als unangemessen markiert",
+  "addOptionalInfo": "Füge weitere nützliche Informationen zur Veröffentlichung hinzu",
   "frmRating": "Rating",
-  "frmOpinion": "Describe your experience",
-  "frmNickname": "Nickname",
-  "frmGivenName": "Given name",
-  "frmFamilyName": "Family name",
-  "frmAge": "Age",
-  "frmGender": "Your gender",
-  "frmGenderFemale": "female",
-  "frmGenderMale": "male",
-  "frmGenderOther": "other",
-  "frmLblContext": "Context of experience",
-  "frmLblCommenting": "Commenting as",
-  "frmExpUser": "user",
-  "frmExpOwner": "owner",
-  "frmAffiliated": "I am affiliated (e.g., owner; friends/family of the owner; work there)",
-  "frmAgreeTerms": "I agree to the <a href=\"https://mangrove.reviews/terms\" rel=\"noopener nofollow\" target=\"_blank\">Terms of Service</a> *",
-  "frmAgreeLicense": "I agree to publishing my review, including any personally identifiable information I optionally entered, under a free and open license (<a href=\"https://creativecommons.org/licenses/by/4.0/\">CC-BY-4.0</a>), and I agree to the <a href=\"https://mangrove.reviews/terms#2-privacy-policy\">Privacy Policy</a> *",
-  "frmInfoMaxFiles": "Maximum images allowed",
-  "frmLblUploadImages": "Upload photos (max. {{MAX_FILES}})",
+  "frmOpinion": "Beschreibe deine Erfahrung",
+  "frmNickname": "Spitzname",
+  "frmGivenName": "Vorname",
+  "frmFamilyName": "Nachname",
+  "frmAge": "Alter",
+  "frmGender": "Geschlecht",
+  "frmGenderFemale": "weiblich",
+  "frmGenderMale": "männlich",
+  "frmGenderOther": "divers",
+  "frmLblContext": "Kontext des Besuchs",
+  "frmLblCommenting": "Kommentiert als",
+  "frmExpUser": "Nutzer",
+  "frmExpOwner": "Inhaber",
+  "frmAffiliated": "Ich bin mit dem Inhaber verbunden (z.B. Inhaber oder Freunde/Familie des Inhabers; ich arbeite hier)",
+  "frmAgreeTerms": "Ich akzeptiere die <a href=\"https://mangrove.reviews/terms\" rel=\"noopener nofollow\" target=\"_blank\">Nutzungsbedingungen</a> *",
+  "frmAgreeLicense": "Ich stimme zu, dass meine Rezension, einschließlich aller von mir optional eingegebenen personenbezogenen Daten, unter einer offenen und unentgeltlichen Nutzungslizenz veröffentlicht wird (<a href=\"https://creativecommons.org/licenses/by/4.0/\">CC-BY-4.0</a>), und ich stimme der <a href=\"https://mangrove.reviews/terms#2-privacy-policy\">Datenschutzerklärung</a> zu *",
+  "frmInfoMaxFiles": "Maximal 5 Bilder möglich",
+  "frmLblUploadImages": "Fotos hochladen (max. {{MAX_FILES}})",
   "addComment": "Add comment",
-  "metaAge": "{{age}} years old",
+  "metaAge": "{{age}} Jahre alt",
   "metaGender": {
-    "female": "Female",
-    "male": "Male"
+    "female": "Weiblich",
+    "male": "Männlich"
   },
-  "metaIsAffiliated": "Is affiliated",
+  "metaIsAffiliated": "Mit Inhaber verbunden",
   "metaIsPersonal": "Personal experience",
   "metaGenerated": "Generated",
   "metaContext": {
-    "business": "Business visit",
-    "family": "with Family",
-    "couple": "Romantic couple",
-    "friends": "with Friends",
-    "solo": "Alone"
+    "business": "Geschäftlich",
+    "family": "Familienausflug",
+    "couple": "Pärchenausflug",
+    "friends": "Ausflug mit Freunden",
+    "solo": "Ausflug alleine"
   },
-  "review_one": "review",
-  "review_other": "reviews",
-  "facetGender": "Gender",
-  "facetContenxt": "Context of reviews",
-  "facetAge": "Age group",
-  "facetRating": "Number of stars",
-  "showFilters": "Show filters",
-  "hideFilters": "Hide filters",
-  "signInNew": "New here? Post your first review to create an account with the posted information.",
-  "signInReturning": "If you already have an Open Reviews account, or if you would like to switch to another Open Reviews account, you can",
-  "signInLogIn": " log in here.",
-  "signInPlaceholder": "Paste Your key here",
+  "review_one": "Rezension",
+  "review_other": "Rezensionen",
+  "facetGender": "Geschlecht",
+  "facetContenxt": "Kontext des Besuchs",
+  "facetAge": "Altersgruppe",
+  "facetRating": "Anzahl Sterne",
+  "showFilters": "Filter anzeigen",
+  "hideFilters": "Filter verbergen",
+  "signInNew": "Neu hier? Veröffentliche deine erste Rezension.",
+  "signInReturning": "Wenn du schon einen Open Reviews Account hast, oder zu einem anderen Open Reviews Account wechseln möchtest, kannst du dich",
+  "signInLogIn": " hier einloggen.",
+  "signInPlaceholder": "Gib hier deinen Schlüssel ein",
   "reviewOpts": {
-    "useful": "This is useful",
-    "confirm": "Confirm this experience",
-    "comment": "Write a comment",
-    "flag": "Flag as inappropriate"
+    "useful": "Das ist hilfreich",
+    "confirm": "Diese Erfahrung bestätigen",
+    "comment": "Kommentieren",
+    "flag": "Als unangemessen markieren"
   },
   "frmFlag": {
-    "title": "Flagging a review",
-    "info": "Thank you for flagging up inappropriate reviews. <strong>Reviews that violate the Terms of Service</strong> will be removed from the dataset. <strong>Low-quality reviews</strong> will remain in the dataset, but will have a reduced influence on the overall rating.<br />Please indicate <strong>up to 3 reasons</strong> why you are flagging this review as inappropriate:",
-    "typeTerms": "Violation of the <a href=\"https://mangrove.reviews/terms\" rel=\"noopener nofollow\" target=\"_blank\">Terms of Service</a>",
+    "title": "Rezension als unangemessen melden",
+    "info": "Danke, dass du eine unangemessene Rezensionen meldest. <strong>Rezensionen, die gegen die Allgemeinen Nutzungsbedingungen verstossen</strong> werden aus der Datenbank gelöscht. <strong>Rezensionen von schlechter Qualität</strong> verbleiben in der Datenbank, werden aber in der Gesamtbewertung einen geringeren Einfluss haben.<br />Bitte gib <strong>bis zu drei Gründe</strong> warum du diese Rezension als unangemessen meldest:",
+    "typeTerms": "Verstoss gegen die <a href=\"https://mangrove.reviews/terms\" rel=\"noopener nofollow\" target=\"_blank\">Allgemeinen Nutzungsbedingungen</a>",
     "typeLowQ": "Low-quality content",
     "typeOther": "Other",
-    "btnSubmit": "Flag as inappropriate",
-    "reason01": "The review contains offensive language that is violent, unlawful, coarse, sexist, racist, accusatory, or defamatory",
-    "reason02": "The review contains personal information that could be used to track, identify, contact or impersonate someone",
-    "reason03": "The review violates someone else's intellectual property, privacy/confidentiality, or personality rights",
-    "reason04": "The review is marketing or spam",
-    "reason05": "The review is on the wrong subject profile",
-    "reason06": "The content doesn't mention a buying or service experience and is solely ethical, political or value-laden opinion",
-    "popupHeader":"Thank you for leaving an Open Review and helping others have better experiences!",
-    "popupContent":" You can save your password (secret key) to use the same account on different platforms that work with <a href=\"https://open-reviews.net\" rel=\"open reviews\" target=\"_blank\"> Open Reviews </a> . Just paste this password when you leave your next review in log in section.",
-    "popupButton":"Copy password to clipboard"
+    "btnSubmit": "Als unangemessen markieren",
+    "reason01": "Die Rezension enthält eine beleidigende Ausdrucksweise, die gewalttätig, rechtswidrig, vulgär, sexistisch, rassistisch, verleumderisch oder diffamierend ist.",
+    "reason02": "Die Rezension enthält persönliche Informationen, die dazu verwendet werden könnten, jemanden zu identifizieren, zu kontaktieren oder sich für ihn auszugeben",
+    "reason03": "Die Rezension verletzt das geistige Eigentum, die Privatsphäre/Datenschutz oder die Persönlichkeitsrechte einer anderen Person.",
+    "reason04": "Die Rezension ist Marketing oder Spam.",
+    "reason05": "Die Rezension bezieht sich auf ein anderes Thema",
+    "reason06": "Der Inhalt erwähnt kein Kauf- oder Serviceerlebnis und ist ausschließlich ethische, politische oder wertebezogene Meinung.",
+    "popupHeader":"Danke, dass du eine Open Review hinterlassen hast und anderen hilfst, bessere Erfahrungen zu machen!",
+    "popupContent":" Du kannst dieses Kennwort (Secret Key) nutzen, um dich mit dem gleichen Account auf verschiedenen Plattformen anzumelden, die mit <a href=\"https://open-reviews.net\" rel=\"open reviews\" target=\"_blank\"> Open Reviews </a> arbeiten. Wenn du deine nächste Rezension abgibst, füge dieses Kennwort einfach im Log-in Bereich ein.",
+    "popupButton":"Kennwort in die Zwischenablage kopieren"
 
   }
 }
